k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nx-api
  namespace: nx
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: nx-api
